Use tri-tone fill color scheme

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -15,7 +15,8 @@
 
     // Fill Colors
     --primary-fill-color: hsl(40, 50%, 95%);
-    --secondary-fill-color: hsl(40, 50%, 99%);
+    --secondary-fill-color: hsl(40, 50%, 97%);
+    --tertiary-fill-color: hsl(40, 50%, 99%);
 
     // Text Colors
     --primary-text-color: hsl(40, 5%, 00%);
@@ -43,8 +44,9 @@
         --apple-system-yellow: rgb(255, 214, 10);
 
         // Fill Colors
-        --primary-fill-color: hsl(210, 5%, 20%);
-        --secondary-fill-color: hsl(210, 5%, 25%);
+        --primary-fill-color: hsl(210, 5%, 18%);
+        --secondary-fill-color: hsl(210, 5%, 22%);
+        --tertiary-fill-color: hsl(210, 5%, 27%);
 
         // Text Colors
         --primary-text-color: rgb(255, 255, 255);
